Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14239

Missing space: "InnoDB: innodb_open_files 425000 should not be greaterthan the open_files_limit 1024"

    XMLWordPrintable

Details

    Description

      2017-11-01 14:48:23 140649331915648 [Warning] InnoDB: innodb_open_files 425000 should not be greaterthan the open_files_limit 1024
      

      $ grep -r 'should not be greater' -A 1 storage/*/handler/ha_innodb.cc
      storage/innobase/handler/ha_innodb.cc:			   << " should not be greater"
      storage/innobase/handler/ha_innodb.cc-			   << "than the open_files_limit " << open_files_limit;
      

      Attachments

        Activity

          People

            marko Marko Mäkelä
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 0d
                0d
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 25m
                25m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.