storage/innobase/handler/ha_innodb.cc
@@ -4285,7 +4285,7 @@ innobase_change_buffering_inited_ok:
 	if (innobase_open_files > (long) open_files_limit) {
 		ib::warn() << "innodb_open_files " << innobase_open_files
 			   << " should not be greater"
-			   << "than the open_files_limit " << open_files_limit;
+			   << " than the open_files_limit " << open_files_limit;
 		if (innobase_open_files > (long) tc_size) {
 			innobase_open_files = tc_size;
 		}
